[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/ui/ConfirmModal.gd" type="Script" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]

[node name="ConfirmModal" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 0.313726 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ModalColorRect" type="ColorRect" parent="CenterContainer"]
margin_left = 460.0
margin_top = 210.0
margin_right = 820.0
margin_bottom = 510.0
rect_min_size = Vector2( 360, 300 )
color = Color( 0.301961, 0.301961, 0.301961, 1 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 490.0
margin_top = 265.0
margin_right = 790.0
margin_bottom = 455.0
rect_min_size = Vector2( 300, 0 )
focus_neighbour_left = NodePath("YesButton")
focus_neighbour_top = NodePath("YesButton")
focus_neighbour_right = NodePath("YesButton")
focus_neighbour_bottom = NodePath("YesButton")
focus_next = NodePath("YesButton")
focus_previous = NodePath("YesButton")
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CenterContainer2/HBoxContainer"]
margin_right = 300.0
margin_bottom = 30.0
text = "YOU_SURE"
align = 1
autowrap = true

[node name="YesButton" type="Button" parent="CenterContainer2/HBoxContainer"]
margin_top = 50.0
margin_right = 300.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 60 )
mouse_default_cursor_shape = 2
text = "YOU_SURE_YES"

[node name="NoButton" type="Button" parent="CenterContainer2/HBoxContainer"]
margin_top = 130.0
margin_right = 300.0
margin_bottom = 190.0
rect_min_size = Vector2( 200, 60 )
mouse_default_cursor_shape = 2
text = "YOU_SURE_NO"
